--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -39,5 +40,6 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  
 }
