--- a/website/package.json
+++ b/website/package.json
@@ -14,13 +14,16 @@
     "@payloadcms/next": "^3.55.1",
     "@payloadcms/payload-cloud": "^3.55.1",
     "@payloadcms/richtext-lexical": "^3.55.1",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.0.0",
     "graphql": "^16.11.0",
     "next": "15.4.5",
     "nodemailer": "^7.0.6",
     "payload": "3.55.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
