--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
     "@payloadcms/richtext-lexical": "^3.55.1",
     "@stripe/react-stripe-js": "^5.2.0",
     "@stripe/stripe-js": "^8.0.0",
+    "csv-stringify": "^6.6.0",
     "graphql": "^16.11.0",
     "next": "15.4.5",
     "nodemailer": "^7.0.6",
